# timeseries-transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
playground/: classification_dataset.ipynb  encoder_classifier.ipynb  fault_dataset.ipynb  transformers(1).ipynb  transformers.ipynb  vanilla_transformer.ipynb
src/: timeseries_model.py  transformer.py
src/timeseries_transformer/: attention.py  constants.py  datasets.py  encoder.py  linear_attn.py  sparse_attn.py  test.py  timeseries_model.py  train.py  train_k_fold.py  training_loop.py  transformer.py  utils.py  vanilla_attention.py  vanilla_model.py
test/: test_attention.py  test_datasets.py  test_utils.py
