[project]
name = "timeseries-transformer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Taimur Ibrahim", email = "tai.him18@gmail.com"},
]
dependencies = [
    "torch>=2.3.1",
    "matplotlib>=3.9.1",
    "jupyter>=1.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
